Fix issue with jumping head

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -18,6 +18,10 @@ body.navbar-is-fixed-bottom{
   padding-bottom:64px!important
 }
 
+body.navbar-is-fixed-top-padding{
+  padding-bottom:57px!important;
+}
+
 body div#admin-bar{
   z-index:1600
 }
